@startuml

title __BUYER's Class Diagram__\n

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.BuyerMain {
            + start()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.BuyerMainController {
            + viewCatalogueButton : Button
            - onExit()
            - onSearchProduct()
            - onSeeCart()
            - onViewCatalogue()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.Catalogue {
            {static} + pStage : Stage
            + pane : Pane
            + scene : Scene
            - page : int
            + ProductDetails()
            + addButton()
            + getMaxPage()
            + getPage()
            {static} + main()
            + start()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.Checkout {
            {static} - finalPrice : double
            {static} + getFinalPrice()
            + setFinalPrice()
            + start()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.CheckoutController {
            + finalPrice : Text
            + initialize()
            + onHome()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.Login {
            {static} # userCredentials : HashMap<String, String>
            {static} + main()
            + start()
            {static} # loginCredentials()
            {static} # registerCredentials()
            - getCredentialsCSV()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.LoginController {
            + loginAsBuyerButton : Button
            + passwordField : PasswordField
            + registerButton : Button
            + usernameField : TextField
            + loginAsBuyerPressed()
            + loginAsSellerPressed()
            + registerPressed()
            - toBuyerMain()
            - toSellerMain()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.SearchForProduct {
            {static} ~ dc : DatabaseController
            {static} + main()
            + start()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.SearchForProductController {
            + homeButton : Button
            + nameColumn : TableColumn<ProductObject, String>
            + priceColumn : TableColumn<ProductObject, Double>
            + ratingColumn : TableColumn<ProductObject, Double>
            + searchButton : Button
            + searchField : TextField
            + stocksColumn : TableColumn<ProductObject, Integer>
            + tableView : TableView<ProductObject>
            + OnHomePressed()
            + OnSearchPressed()
            + goToItem()
            - getItemDetails()
            - setTable()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.SeeCart {
            + start()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.SeeCartController {
            + name1 : Text
            + name2 : Text
            + name3 : Text
            + name4 : Text
            + name5 : Text
            + name6 : Text
            + name7 : Text
            + name8 : Text
            + nextPage : Button
            + pageNum : Text
            + prevPage : Button
            + price1 : Text
            + price2 : Text
            + price3 : Text
            + price4 : Text
            + price5 : Text
            + price6 : Text
            + price7 : Text
            + price8 : Text
            + priceTotal : Text
            + quantity1 : Text
            + quantity2 : Text
            + quantity3 : Text
            + quantity4 : Text
            + quantity5 : Text
            + quantity6 : Text
            + quantity7 : Text
            + quantity8 : Text
            + remove1 : Button
            + remove2 : Button
            + remove3 : Button
            + remove4 : Button
            + remove5 : Button
            + remove6 : Button
            + remove7 : Button
            + remove8 : Button
            - currentPage : int
            - totalNumPrice : double
            - totalPages : int
            + initialize()
            + onCheckout()
            + onNextPage()
            + onPrevPage()
            + onRemove1()
            + onRemove2()
            + onRemove3()
            + onRemove4()
            + onRemove5()
            + onRemove6()
            + onRemove7()
            + onRemove8()
            - getIndexfromID()
            - initContent()
            - onHome()
            - removeButton()
            - setVisibility()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.ViewProduct {
            {static} - fromSearch : boolean
            {static} - productIndex : int
            {static} + getFromSearch()
            {static} + getProductIndex()
            + setFromSearch()
            + setProductIndex()
            + start()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace buyer {
        class com.example.lbycpeifinalproject.buyer.ViewProductController {
            + addToCartButton : Button
            + categoriesText : Text
            + descriptionText : Text
            + nameText : Text
            + priceText : Text
            + productImage : ImageView
            + quantityText : TextField
            + stockText : Text
            - productIndex : int
            + initialize()
            - onAddToCart()
            - onHome()
        }
      }
    }
  

  com.example.lbycpeifinalproject.buyer.BuyerMain -up-|> javafx.application.Application
  com.example.lbycpeifinalproject.buyer.Catalogue -up-|> javafx.application.Application
  com.example.lbycpeifinalproject.buyer.Checkout -up-|> javafx.application.Application
  com.example.lbycpeifinalproject.buyer.CheckoutController o-- com.example.lbycpeifinalproject.misc.CartController : cc
  com.example.lbycpeifinalproject.buyer.Login -up-|> javafx.application.Application
  com.example.lbycpeifinalproject.buyer.SearchForProduct -up-|> javafx.application.Application
  com.example.lbycpeifinalproject.buyer.SeeCart -up-|> javafx.application.Application
  com.example.lbycpeifinalproject.buyer.SeeCartController o-- com.example.lbycpeifinalproject.misc.CartController : cc
  com.example.lbycpeifinalproject.buyer.SeeCartController o-- com.example.lbycpeifinalproject.misc.DatabaseController : dc
  com.example.lbycpeifinalproject.buyer.ViewProduct -up-|> javafx.application.Application
  com.example.lbycpeifinalproject.buyer.ViewProductController o-- com.example.lbycpeifinalproject.misc.CartController : cc
  com.example.lbycpeifinalproject.buyer.ViewProductController o-- com.example.lbycpeifinalproject.misc.DatabaseController : dc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
